# BevyBasics

./: Cargo.toml  scene.scn.ron
assets/: 8.scr.ron  9_0.scr.ron  9_1.scr.ron  9_2.scr.ron  9_3.scr.ron  gltf.gltf  part_scene.scn.ron  scene.scn.ron
examples/: rotation.rs  transform.rs  visibility.rs
src/: common.rs  components.rs  ecs.rs  entitys.rs  events.rs  lib.rs  local.rs  main.rs  query.rs  reflect.rs  resources.rs  scenes.rs  systems.rs  transform.rs  user_input.rs  visibility.rs
src/user_input/: gamepad.rs  keyboard.rs  mouse.rs  touch.rs
