[package]
name = "yt_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.6.1"}
bevy-inspector-egui = "0.9.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}

rand = "0.8.5"