[package]
name = "bevy_basics"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8.1"}
bevy-inspector-egui = "0.13.0"
bevy_editor_pls = {git = "https://github.com/jakobhellermann/bevy_editor_pls"}
ron = "0.8.0"
rand = "0.8.5"
serde = "1.0.144"